--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -17,7 +17,7 @@
         "HxhStlm4bTJ7",
         "qRa2FAOFpVJ0"
       ],
-      "authorship_tag": "ABX9TyP7HE16yWpz7DVSery951PA",
+      "authorship_tag": "ABX9TyPgiZ749NgaX99j508K5oO3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2580,11 +2580,11 @@
         "print(dir(str))\n"
       ],
       "metadata": {
-        "id": "4WrOievXbkKV",
-        "outputId": "15391987-9d57-4e3d-b24f-1a1365e1fa91",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4WrOievXbkKV",
+        "outputId": "15391987-9d57-4e3d-b24f-1a1365e1fa91"
       },
       "execution_count": 111,
       "outputs": [
@@ -2697,12 +2697,12 @@
         "mystr1.lstrip()"
       ],
       "metadata": {
-        "id": "XyDnQFjSv7YH",
-        "outputId": "afce9b02-0af1-4a94-eb6f-a1e8804bc06b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "XyDnQFjSv7YH",
+        "outputId": "afce9b02-0af1-4a94-eb6f-a1e8804bc06b"
       },
       "execution_count": 99,
       "outputs": [
@@ -2737,11 +2737,11 @@
         "print('--'*25)\n"
       ],
       "metadata": {
-        "id": "i9moaRZZwe5D",
-        "outputId": "3e8ba4df-c2d6-4a47-d214-b38172b3e7de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i9moaRZZwe5D",
+        "outputId": "3e8ba4df-c2d6-4a47-d214-b38172b3e7de"
       },
       "execution_count": 100,
       "outputs": [
@@ -2769,12 +2769,12 @@
         "mystr3"
       ],
       "metadata": {
-        "id": "KV9kZKIh1JKw",
-        "outputId": "36009316-5f55-4f60-bf51-e2ed4b642ffc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "KV9kZKIh1JKw",
+        "outputId": "36009316-5f55-4f60-bf51-e2ed4b642ffc"
       },
       "execution_count": 101,
       "outputs": [
@@ -2803,11 +2803,11 @@
         "print(mystr3.title()) # returns each word's 1st letter in uppercase"
       ],
       "metadata": {
-        "id": "SWrvVGo44pFK",
-        "outputId": "9d66baee-334d-4af1-9dc5-e26ae4d30983",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SWrvVGo44pFK",
+        "outputId": "9d66baee-334d-4af1-9dc5-e26ae4d30983"
       },
       "execution_count": 102,
       "outputs": [
@@ -2837,11 +2837,11 @@
         "print(mystr3.replace('He', \"hello\")) # Replace substring 'He' with 'hello'"
       ],
       "metadata": {
-        "id": "qyE0VcbV4pBg",
-        "outputId": "49e5e78d-6245-495b-b54a-0b8c681de218",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qyE0VcbV4pBg",
+        "outputId": "49e5e78d-6245-495b-b54a-0b8c681de218"
       },
       "execution_count": 103,
       "outputs": [
@@ -2874,11 +2874,11 @@
         "print(\"No of times substring 'three' occurred {}\".format(mystr4.count('three')))"
       ],
       "metadata": {
-        "id": "RyE8cXJ_4o-F",
-        "outputId": "e219bc26-515b-4197-bd07-ff5875b4ee7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RyE8cXJ_4o-F",
+        "outputId": "e219bc26-515b-4197-bd07-ff5875b4ee7e"
       },
       "execution_count": 104,
       "outputs": [
@@ -2908,11 +2908,11 @@
         "print(mystr4.startswith('three'))"
       ],
       "metadata": {
-        "id": "hmQ9nwg6QiNs",
-        "outputId": "eaf3550a-738d-4a69-eaad-f3b2f062937b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hmQ9nwg6QiNs",
+        "outputId": "eaf3550a-738d-4a69-eaad-f3b2f062937b"
       },
       "execution_count": 105,
       "outputs": [
@@ -2942,11 +2942,11 @@
         "print(type(mylist))\n"
       ],
       "metadata": {
-        "id": "Lb0uhCvR4ozp",
-        "outputId": "82c7f953-2507-4b4f-8541-ca6313a108a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Lb0uhCvR4ozp",
+        "outputId": "82c7f953-2507-4b4f-8541-ca6313a108a0"
       },
       "execution_count": 112,
       "outputs": [
@@ -2973,11 +2973,11 @@
         "print(res.format(item1, item2, item3))"
       ],
       "metadata": {
-        "id": "GI-ts5KY4otJ",
-        "outputId": "8220e565-5f24-4f07-e65c-8d923609fb09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GI-ts5KY4otJ",
+        "outputId": "8220e565-5f24-4f07-e65c-8d923609fb09"
       },
       "execution_count": 116,
       "outputs": [
@@ -3001,11 +3001,11 @@
         "print(res.format(item1,item2,item3))"
       ],
       "metadata": {
-        "id": "JdPSh0g04opY",
-        "outputId": "2e2d9178-09f3-4570-83da-5b3861e3d2e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JdPSh0g04opY",
+        "outputId": "2e2d9178-09f3-4570-83da-5b3861e3d2e4"
       },
       "execution_count": 117,
       "outputs": [
@@ -3020,12 +3020,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# center() method\n",
+        "# Return a centered string of length width.\n",
+        "# Padding is done using specified fill character default is a space\n",
+        "str1 = \"Hello Everyone\"\n",
+        "str2 = str1.center(100) # length as 100 & with default fill character\n",
+        "print(str2)\n",
+        "print()\n",
+        "str3 = str1.center(100, '*')# length as 100 & with \"*\" fill character\n",
+        "print(str3)\n"
+      ],
       "metadata": {
-        "id": "aF8ppAfW4oM0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aF8ppAfW4oM0",
+        "outputId": "3b1c222f-e755-425b-8b2b-7b6aafd8d262"
       },
-      "execution_count": 89,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                           Hello Everyone                                           \n",
+            "\n",
+            "*******************************************Hello Everyone*******************************************\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3043,6 +3067,114 @@
         "id": "8nvgOGpS4oGX"
       },
       "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mjJR1Harx0Ng"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8h1BEWNmx0Jv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xnMmvn1kx0GW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iFn70ev2x0Cc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OImB8mzOxz-w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DOHwFJi7xz6-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lO0nJ9Y_xz3v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fWVcV2g_xzzu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YIcFnQ_Rxzwh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rv_R44k2xzs9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gUuAjemMxzp2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "O0u9N0Y6xzlb"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
