--- a/RAG_LLM.ipynb
+++ b/RAG_LLM.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1LYAA1wmv_sB1HV_N-Xww_KsyUgT1PlbO",
-      "authorship_tag": "ABX9TyNtoFoO5vzMcIF3OdLqW5zj",
+      "authorship_tag": "ABX9TyMIncm9bOcGd94nbT3wZJZd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -360,10 +360,10 @@
       ],
       "metadata": {
         "id": "kNNfpZ50r006",
-        "outputId": "e74d35b5-cc58-4467-9799-e0e25fe670ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e74d35b5-cc58-4467-9799-e0e25fe670ce"
       },
       "execution_count": 5,
       "outputs": [
@@ -400,11 +400,11 @@
         "# !pip install pi_heif"
       ],
       "metadata": {
-        "id": "9Bl3xS5eOwrt",
-        "outputId": "2442d1a8-75f4-44b7-9bcd-daa362668d8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9Bl3xS5eOwrt",
+        "outputId": "2442d1a8-75f4-44b7-9bcd-daa362668d8c"
       },
       "execution_count": 11,
       "outputs": [
@@ -493,11 +493,11 @@
         "documents"
       ],
       "metadata": {
-        "id": "XHvBk7GURVO8",
-        "outputId": "8b821482-4a39-4b3e-bb31-5b98803ab021",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XHvBk7GURVO8",
+        "outputId": "8b821482-4a39-4b3e-bb31-5b98803ab021"
       },
       "execution_count": 17,
       "outputs": [
@@ -516,27 +516,27 @@
     {
       "cell_type": "code",
       "source": [
-        "text_splitter = CharacterTextSplitter(chunk_size = 200, chunk_overlap = 50)\n",
+        "text_splitter = CharacterTextSplitter(chunk_size = 200, chunk_overlap = 100)\n",
         "text_splitter"
       ],
       "metadata": {
         "id": "hhxACtZdxQdr",
-        "outputId": "033eea42-86de-45a4-8935-210f86602fda",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4bc4aaf7-eb64-4c9f-da1d-f2cd883917b1"
       },
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<langchain_text_splitters.character.CharacterTextSplitter at 0x79d9afdffc10>"
+              "<langchain_text_splitters.character.CharacterTextSplitter at 0x79d8ba8620d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 18
         }
       ]
     },
