--- a/RAG_LLM.ipynb
+++ b/RAG_LLM.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1LYAA1wmv_sB1HV_N-Xww_KsyUgT1PlbO",
-      "authorship_tag": "ABX9TyP6/K89GJc6MpcC9X188IPM",
+      "authorship_tag": "ABX9TyNzSk6OgmQFV4GBI1FYm9qz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -144,7 +144,7 @@
       "source": [
         "Framework: **LANGCHAIN**\n",
         "\n",
-        "LLM MODEL - **LLAMA3 70B Parameter**\n",
+        "LLM MODEL - **llama-3.1-8b-instant**\n",
         "\n",
         "LPU = **GROQ API**\n",
         "\n",
